# hsu-procman-rust

./: .gitignore  Cargo.toml  README.md  e2e-tests-run-linux.txt  e2e-tests-run-windows.txt
.github/workflows/: ci.yml
bins/hsu-process-manager/: Cargo.toml  README.md  config-example.yaml  config-go-compatible.yaml  config-minimal.yaml
bins/hsu-process-manager/src/: main.rs
crates/hsu-common/: Cargo.toml
crates/hsu-common/src/: errors.rs  lib.rs  types.rs
crates/hsu-log-collection/: Cargo.toml
crates/hsu-log-collection/src/: lib.rs  output.rs  service.rs  types.rs
crates/hsu-managed-process/: Cargo.toml
crates/hsu-managed-process/src/: lib.rs  process_control.rs
crates/hsu-managed-process/src/process_types/: integrated_managed.rs  mod.rs  standard_managed.rs  unmanaged.rs
crates/hsu-module-api/: Cargo.toml
crates/hsu-module-api/src/: bootstrap.rs  config.rs  gateway_factory.rs  gateway_factory_typed.rs  lib.rs  module_descriptor.rs  module_trait.rs  registry.rs  registry_client.rs  service_connector.rs
crates/hsu-module-management/: Cargo.toml
crates/hsu-module-management/src/: config_types.rs  lib.rs  lifecycle.rs  module_descriptor.rs  module_types.rs  registry.rs
crates/hsu-module-proto/: Cargo.toml
crates/hsu-module-proto/src/: client_connection.rs  direct.rs  grpc.rs  grpc_server.rs  lib.rs  options.rs  server.rs  server_manager.rs  traits.rs
crates/hsu-monitoring/: Cargo.toml
crates/hsu-monitoring/proto/: health.proto
crates/hsu-monitoring/src/: grpc.rs  health_monitor.rs  http.rs  lib.rs  mod.rs  resource_monitoring.rs
crates/hsu-process/: Cargo.toml
crates/hsu-process-file/: Cargo.toml
crates/hsu-process-file/src/: lib.rs
crates/hsu-process-management/: Cargo.toml
crates/hsu-process-management/src/: api.rs  attachment.rs  lib.rs  lifecycle.rs  manager.rs  manager_tests.rs  process_control_impl.rs
crates/hsu-process-management/src/api/: grpc.rs  http.rs
crates/hsu-process-management/src/config/: mod.rs  validation.rs
crates/hsu-process-management/src/manager/: README.MD  actor.rs  commands.rs  handle.rs  mod.rs  ops.rs  tests.rs  types.rs
crates/hsu-process-state/: Cargo.toml
crates/hsu-process-state/src/: lib.rs
crates/hsu-process/src/: check.rs  execute.rs  lib.rs  terminate.rs  terminate_windows.rs  validation.rs
crates/hsu-resource-limits/: Cargo.toml
crates/hsu-resource-limits/src/: lib.rs  policy.rs
crates/hsu-service-registry/: Cargo.toml
crates/hsu-service-registry/src/: api.rs  lib.rs  server.rs  storage.rs  transport.rs  types.rs
test-utils/testexe/: Cargo.toml  README.md
test-utils/testexe/src/: main.rs
tests/common/: assertions.rs  log_parser.rs  mod.rs  process_manager.rs  test_executor.rs
tests/e2e-tests/: Cargo.toml
tests/e2e-tests/src/: assertions.rs  lib.rs  log_parser.rs  process_manager.rs  test_executor.rs
tests/e2e-tests/tests/: README.MD  mod.rs  perf_cancellation_semantics.rs  perf_concurrent_ops_isolation.rs  perf_hot_process_isolation.rs  perf_procman_v1_vs_v2.rs  perf_read_heavy_write_heavy.rs  procman_v1_vs_v2.rs  test_forced_stop.rs  test_graceful_stop.rs  test_health_restart.rs  test_http_health.rs  test_log_collection.rs  test_memory_limit.rs  test_stop_waits_for_exit.rs
tests/e2e-tests/tests/perf_common/: mod.rs
