[package]
name = "hsu-log-collection"
version = "0.1.0"
edition = "2021"

[dependencies]
hsu-common = { path = "../hsu-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
parking_lot = "0.12"
