[package]
name = "hsu-module-management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Module management and lifecycle for HSU framework"

[lib]
doctest = false

[dependencies]
hsu-common = { path = "../hsu-common" }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

