[package]
name = "hsu-process-management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Exactly one of these must be enabled (enforced in src/lib.rs).
procman-v1 = []
procman-v2 = []
default = ["procman-v2"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Futures extensions
futures = "0.3"

# Internal dependencies - common & module communication
hsu-common = { path = "../hsu-common" }

# Internal dependencies - process management
hsu-process-state = { path = "../hsu-process-state" }
hsu-process = { path = "../hsu-process" }
hsu-process-file = { path = "../hsu-process-file" }
hsu-resource-limits = { path = "../hsu-resource-limits" }
hsu-monitoring = { path = "../hsu-monitoring" }
hsu-log-collection = { path = "../hsu-log-collection" }
hsu-managed-process = { path = "../hsu-managed-process" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[dev-dependencies]
tempfile = "3.8"

