[package]
name = "hsu-service-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Service registry for HSU framework"

[lib]
doctest = false

[dependencies]
hsu-common = { path = "../hsu-common" }

tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
tempfile = "3.8"

