[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wait-timeout = "0.2"

# For process termination with AttachConsole Dead PID Hack on Windows
[target.'cfg(windows)'.dependencies]
hsu-process = { path = "../../crates/hsu-process" }

# For Unix signal handling in process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
# Test framework
tokio = { version = "1.40", features = ["full"] }

[[test]]
name = "e2e_tests"
path = "tests/mod.rs"

